<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="#eeeeee"
    android:orientation="vertical">

    <Button
        android:id="@+id/finishbt"
        android:layout_width="298dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#d9d0d0"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/end"
        android:textColor="#ff7a00"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="305dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#ff7a00"
        android:gravity="center"
        android:text="@string/control"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/finishbt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/controlrayout"
        android:layout_width="299dp"
        android:layout_height="94dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522">

        <ImageButton
            android:id="@+id/play"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="68dp"
            android:contentDescription="@string/play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/stop"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@android:drawable/ic_media_pause" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
